# ai_comp_2026

./: .gitignore  CLAUDE.md
docs/: HANDOFF_2026-07-20.md  decision_architecture.md  devlog_2026-07-19.md
src/MORAI-ROS_morai_msgs/msg/: EgoVehicleStatus.msg
src/competition_vehicle_interface/: CMakeLists.txt  package.xml
src/competition_vehicle_interface/launch/: competition_control_udp_bridge.launch  competition_morai_udp_bridge.launch
src/competition_vehicle_interface/scripts/: competition_control_udp_bridge.py  competition_morai_udp_bridge.py  test_normalize_steer.py
src/control/: CMakeLists.txt  package.xml
src/control/launch/: ev_engine_sound.launch  ice_v8_100kph.launch  ice_v8_engine_sound.launch  morai_engine_sound.launch  mpc_control_mode.launch
src/control/scripts/: acceleration_test.py  braking_distance_test.py  morai_engine_sound.py  morai_engine_sound_ev.py  mpc_lap_tuner.py  purepursuit.py  v8_engine.py
src/control/src/: mpc_control.cpp  tracking_error_reporter.cpp
src/global_path_planner/: CMakeLists.txt  package.xml
src/global_path_planner/docs/: work_log.md
src/global_path_planner/include/global_path_planner/: path_shift_planner.h  rotary_gate.h  speed_profiler.h
src/global_path_planner/launch/: adas_drive.launch  gpp_local_final.launch  obstacle_avoid.launch  obstacle_info.launch  path_maker.launch  rotary_entry.launch  rotary_test.launch  speed_profiler.launch
src/global_path_planner/launch/no_uses/: ai_gpp_local_final.launch  bok_gpp_local.launch
src/global_path_planner/map_data/: ai_region_map.yaml  global_map.yaml  region_map.yaml
src/global_path_planner/path_data/: 2026_molit_comp_global_path.txt  comp.txt  comp_sm.txt  comp_v2.txt  comp_v2_sm.txt  comp_v2_sm_dev03.txt  comp_v2_sm_dev05.txt  comp_v3.txt  test1.txt  test1_sm.txt
src/global_path_planner/path_data/NOT_USED/: 1_test_global_path_sm.txt  250927_KATRI_SIM_path_sm.txt  251011_KATRI_path2_sm.txt  251014_KATRI_path_2_sm.txt  251021.txt  251021_test_global_path_2_sm.txt  3_test_global_path_sm.txt  ai_1_251024_sm.txt  ai_2_251024_sm.txt  global_path_2.txt  global_path_2_sm.txt  kcity.txt  main_final_1_1.txt  main_final_1_sm.txt  main_final_2_sm.txt  main_final_3_sm.txt  path.txt  path_1.txt  path_1_sm.txt  path_2.txt  path_2_sm.txt  path_3.txt  path_4.txt  path_sm.txt  test.txt  test1.txt  test1_1.txt  test1_1_sm.txt  test1_sm.txt  test_global_path_2_sm.txt  testpath.txt  testpath_1.txt  testpath_1_sm.txt  testpath_sm.txt
src/global_path_planner/scripts/: fit_rotary_circle.py  global_path_publisher.py  gps_imu_fusion.py  ll2utm.py  morai_imu_udp.py  path_maker_sm.py  test_acc.py  test_obstacle_info.py
src/global_path_planner/scripts/not_used/: ai_gpsudptoros.py  change.py  globa_path_publisher_1.py  globa_path_publisher_2.py  lattice_planner.py  ll2utm_newKcity.py  ll2utm_not_modified.py
src/global_path_planner/src/: acc_node.cpp  local_path_selector.cpp  obstacle_info_publisher.cpp  odom_path_publisher.cpp  path_shift_planner.cpp  region_state_publisher.cpp  rotary_entry_node.cpp  rotary_gate.cpp  speed_profiler.cpp  speed_profiler_node.cpp  static_obstacle_avoider.cpp
src/global_path_planner/src/NOT_USED/: ai_local_path_selector.cpp  ai_region_state_publisher.cpp  local_path_selector_robo.cpp  odom_path_publisher (copy).txt  odom_path_publisher_robo.cpp  region_state_robo.cpp
src/global_path_planner/test/: test_path_shift_planner.cpp  test_rotary_gate.cpp  test_speed_profiler.cpp
src/katri_msgs/: CMakeLists.txt  package.xml
src/katri_msgs/msg/: Object.msg  Objects.msg  ObstacleInfo.msg  ObstacleInfoArray.msg
src/morai_gadis_set/: CMakeLists.txt  package.xml
src/morai_gadis_set/launch/: control_udp_pub.launch  morai_udp_bridge.launch  object_info_udp_bridge.launch
src/morai_gadis_set/scripts/: control_udp_pub.py  morai_udp_bridge.py  object_info_udp_bridge.py
src/purepursuit/: CMakeLists.txt  package.xml
src/purepursuit/launch/: hybrid_curv_real_mode.launch
src/purepursuit/scripts/: purepursuit_ego.py
src/purepursuit/src/: hybrid_curv_real.cpp  hybrid_real_curv.cpp  hybrid_robo_real.cpp  purepursuit_robo_real.cpp
