<?xml version="1.0"?>
<package format="2">
  <name>morai_gadis_set</name>
  <version>0.0.1</version>
  <description>MORAI UDP bridge package (GPS + EgoVehicleStatus)</description>

  <maintainer email="beomgyo@todo.todo">beomgyo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>morai_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>morai_msgs</exec_depend>

  <export/>
</package>
